// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component AddonAfterCheckbox renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <input
        class="mia-platform-input mia-platform-input-outlined"
        type="text"
        value=""
      />
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonCheckbox"
        >
          <div
            class="checkboxComponent"
          >
            <div
              class="checkboxTextWrapper"
            >
              <label
                class="mia-platform-checkbox-wrapper"
              >
                <span
                  class="mia-platform-checkbox ant-wave-target"
                >
                  <input
                    class="mia-platform-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="mia-platform-checkbox-inner"
                  />
                </span>
              </label>
              test
            </div>
          </div>
        </div>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonAfterSelect renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <input
        class="mia-platform-input mia-platform-input-outlined"
        type="text"
        value=""
      />
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonSelect"
        >
          <div
            class="mia-platform-select mia-platform-select-outlined input select mia-platform-select-single mia-platform-select-show-arrow"
          >
            <div
              class="mia-platform-select-selector"
            >
              <span
                class="mia-platform-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="mia-platform-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="mia-platform-select-selection-placeholder"
              />
            </div>
            <span
              aria-hidden="true"
              class="mia-platform-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <svg
                color="currentColor"
                fill="currentColor"
                height="16"
                role="img"
                stroke="currentColor"
                stroke-width="0"
                style="color: currentColor;"
                viewBox="0 0 256 256"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonAfterText renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <input
        class="mia-platform-input mia-platform-input-outlined"
        type="text"
        value=""
      />
      <span
        class="mia-platform-input-group-addon"
      >
        test
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonBeforeCheckbox renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonCheckbox"
        >
          <div
            class="checkboxComponent"
          >
            <div
              class="checkboxTextWrapper"
            >
              <label
                class="mia-platform-checkbox-wrapper"
              >
                <span
                  class="mia-platform-checkbox ant-wave-target"
                >
                  <input
                    class="mia-platform-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="mia-platform-checkbox-inner"
                  />
                </span>
              </label>
              test
            </div>
          </div>
        </div>
      </span>
      <input
        class="mia-platform-input mia-platform-input-outlined"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonBeforeSelect renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonSelect"
        >
          <div
            class="mia-platform-select mia-platform-select-outlined input select mia-platform-select-single mia-platform-select-show-arrow"
          >
            <div
              class="mia-platform-select-selector"
            >
              <span
                class="mia-platform-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="mia-platform-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="mia-platform-select-selection-placeholder"
              />
            </div>
            <span
              aria-hidden="true"
              class="mia-platform-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <svg
                color="currentColor"
                fill="currentColor"
                height="16"
                role="img"
                stroke="currentColor"
                stroke-width="0"
                style="color: currentColor;"
                viewBox="0 0 256 256"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </span>
      <input
        class="mia-platform-input mia-platform-input-outlined"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonBeforeText renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        test
      </span>
      <input
        class="mia-platform-input mia-platform-input-outlined"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonCheckboxDisabled renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-disabled mia-platform-input-group-wrapper-outlined input fullWidth disabled input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonCheckbox"
        >
          <div
            class="checkboxComponent disabled"
          >
            <div
              class="checkboxTextWrapper"
            >
              <label
                class="mia-platform-checkbox-wrapper mia-platform-checkbox-wrapper-disabled"
              >
                <span
                  class="mia-platform-checkbox ant-wave-target mia-platform-checkbox-disabled"
                >
                  <input
                    class="mia-platform-checkbox-input"
                    disabled=""
                    type="checkbox"
                  />
                  <span
                    class="mia-platform-checkbox-inner"
                  />
                </span>
              </label>
              test
            </div>
          </div>
        </div>
      </span>
      <input
        class="mia-platform-input mia-platform-input-disabled mia-platform-input-outlined"
        disabled=""
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonCheckboxDisabledChecked renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-disabled mia-platform-input-group-wrapper-outlined input fullWidth disabled input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonCheckbox"
        >
          <div
            class="checkboxComponent disabled"
          >
            <div
              class="checkboxTextWrapper"
            >
              <label
                class="mia-platform-checkbox-wrapper mia-platform-checkbox-wrapper-disabled"
              >
                <span
                  class="mia-platform-checkbox ant-wave-target mia-platform-checkbox-checked mia-platform-checkbox-disabled"
                >
                  <input
                    checked=""
                    class="mia-platform-checkbox-input"
                    disabled=""
                    type="checkbox"
                  />
                  <span
                    class="mia-platform-checkbox-inner"
                  />
                </span>
              </label>
              test
            </div>
          </div>
        </div>
      </span>
      <input
        class="mia-platform-input mia-platform-input-disabled mia-platform-input-outlined"
        disabled=""
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonCheckboxError renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined mia-platform-input-group-wrapper-status-error input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonCheckbox"
        >
          <div
            class="checkboxComponent"
          >
            <div
              class="checkboxTextWrapper"
            >
              <label
                class="mia-platform-checkbox-wrapper"
              >
                <span
                  class="mia-platform-checkbox ant-wave-target"
                >
                  <input
                    class="mia-platform-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="mia-platform-checkbox-inner"
                  />
                </span>
              </label>
              test
            </div>
          </div>
        </div>
      </span>
      <input
        class="mia-platform-input mia-platform-input-outlined mia-platform-input-status-error"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonSelectDisabled renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-disabled mia-platform-input-group-wrapper-outlined input fullWidth disabled input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonSelect"
        >
          <div
            class="mia-platform-select mia-platform-select-outlined input disabled select disabled mia-platform-select-single mia-platform-select-show-arrow mia-platform-select-disabled"
          >
            <div
              class="mia-platform-select-selector"
            >
              <span
                class="mia-platform-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="mia-platform-select-selection-search-input"
                  disabled=""
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="mia-platform-select-selection-placeholder"
              />
            </div>
            <span
              aria-hidden="true"
              class="mia-platform-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <svg
                color="currentColor"
                fill="currentColor"
                height="16"
                role="img"
                stroke="currentColor"
                stroke-width="0"
                style="color: currentColor;"
                viewBox="0 0 256 256"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </span>
      <input
        class="mia-platform-input mia-platform-input-disabled mia-platform-input-outlined"
        disabled=""
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonSelectError renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined mia-platform-input-group-wrapper-status-error input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        <div
          class="inputAddonSelect"
        >
          <div
            class="mia-platform-select mia-platform-select-outlined input select mia-platform-select-single mia-platform-select-show-arrow"
          >
            <div
              class="mia-platform-select-selector"
            >
              <span
                class="mia-platform-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="mia-platform-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="mia-platform-select-selection-placeholder"
              />
            </div>
            <span
              aria-hidden="true"
              class="mia-platform-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <svg
                color="currentColor"
                fill="currentColor"
                height="16"
                role="img"
                stroke="currentColor"
                stroke-width="0"
                style="color: currentColor;"
                viewBox="0 0 256 256"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </span>
      <input
        class="mia-platform-input mia-platform-input-outlined mia-platform-input-status-error"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonTextDisabled renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-disabled mia-platform-input-group-wrapper-outlined input fullWidth disabled input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        test
      </span>
      <input
        class="mia-platform-input mia-platform-input-disabled mia-platform-input-outlined"
        disabled=""
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AddonTextError renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-group-wrapper mia-platform-input-group-wrapper-outlined mia-platform-input-group-wrapper-status-error input fullWidth input"
  >
    <span
      class="mia-platform-input-wrapper mia-platform-input-group"
    >
      <span
        class="mia-platform-input-group-addon"
      >
        test
      </span>
      <input
        class="mia-platform-input mia-platform-input-outlined mia-platform-input-status-error"
        type="text"
        value=""
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component AllowClear renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-affix-wrapper mia-platform-input-outlined input fullWidth input"
  >
    <input
      class="mia-platform-input"
      type="text"
      value="text"
    />
    <span
      class="mia-platform-input-suffix"
    >
      <span
        class="mia-platform-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component Hidden renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="hidden"
    value=""
  />
</DocumentFragment>
`;

exports[`Input Component Password renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`Input Component Search renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="search"
    value=""
  />
</DocumentFragment>
`;

exports[`Input Component TextArea renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="textarea"
    value=""
  />
</DocumentFragment>
`;

exports[`Input Component With left icon renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-affix-wrapper mia-platform-input-outlined input fullWidth input"
  >
    <span
      class="mia-platform-input-prefix"
    >
      <svg
        color="currentColor"
        fill="none"
        height="12"
        role="img"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="color: currentColor;"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <line
          x1="21"
          x2="16.65"
          y1="21"
          y2="16.65"
        />
      </svg>
    </span>
    <input
      class="mia-platform-input"
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`Input Component With right icon renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-input-affix-wrapper mia-platform-input-outlined input fullWidth input"
  >
    <input
      class="mia-platform-input"
      type="text"
      value=""
    />
    <span
      class="mia-platform-input-suffix"
    >
      <svg
        color="currentColor"
        fill="none"
        height="12"
        role="img"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="color: currentColor;"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <line
          x1="21"
          x2="16.65"
          y1="21"
          y2="16.65"
        />
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Input Component renders correctly 1`] = `
<DocumentFragment>
  <input
    class="mia-platform-input mia-platform-input-outlined input fullWidth input"
    type="text"
    value=""
  />
</DocumentFragment>
`;
